# practice-5-travel-diary

./: README.md
backend/: .env  .gitignore  openapi.json  pyproject.toml  run_app.py  setup_db.py
backend/src/: app.py  env.py
backend/src/modules/auth/: auth_dependencies.py  auth_models.py  auth_router.py
backend/src/modules/common/: dto.py  exceptions.py
backend/src/modules/database/: db.py
backend/src/modules/travel_posts/: travel_posts_dto.py  travel_posts_models.py  travel_posts_router.py
backend/src/modules/users/: users_dto.py  users_router.py
frontend/: .gitignore  package-lock.json  package.json  tsconfig.node.json
frontend/src/: api.ts  index.css  main.tsx
frontend/src/components/: PageHeader.tsx  PostCard.tsx  typography.tsx
frontend/src/components/ui/: spinner.tsx
frontend/src/lib/: utils.ts
frontend/src/screens/: App.tsx  PageRoot.tsx
frontend/src/screens/Auth/: LoginScreen.tsx  LoginScreenVm.tsx  RegisterScreen.tsx  RegisterScreenVm.tsx
frontend/src/screens/Stores/: AuthStore.ts
frontend/src/screens/TravelPosts/: CreateOrUpdatePostScreenVm.tsx  CreatePostScreen+UpdatePostScreen.tsx  MyFeedScreen.tsx  MyFeedScreenVm.tsx  UserProfile.tsx  UserProfileVm.tsx
